--- a/.github/workflows/CI-Backend.yml
+++ b/.github/workflows/CI-Backend.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      ENVIRONMENT: ${{ github.ref_name }}   # main | dev | test
-      IMAGE_TAG: latest                     
+      ENVIRONMENT: ${{ github.ref_name }}
+      IMAGE_TAG: latest
 
     steps:
       - name: Checkout current repo
@@ -70,6 +70,29 @@ jobs:
       - name: Run Synced Backend Tests
         run: newman run backend-tests-postman.json
 
+      # ---------------------------------------------------------
+      # SONARCLOUD - QUALITY GATE  (AQUÍ SE AGREGA)
+      # ---------------------------------------------------------
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install sonar-scanner
+        run: npm install -g sonar-scanner
+
+      - name: Run SonarCloud Scan (Backend)
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner \
+            -Dsonar.projectKey=backend_${{ env.ENVIRONMENT }} \
+            -Dsonar.organization=tu_org \
+            -Dsonar.sources=./product-service \
+            -Dsonar.sources=./inventory-service \
+            -Dsonar.qualitygate.wait=true \
+            -Dsonar.sourceEncoding=UTF-8
+
       # -------------------------
       # AWS Login
       # -------------------------
@@ -85,10 +108,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # ================================================================
       # PRODUCT SERVICE
-      # ================================================================
-
       - name: Build Product Service image
         run: docker build -t product-service ./product-service
 
@@ -104,10 +124,7 @@ jobs:
           ECR_REPOSITORY: product-service-${{ env.ENVIRONMENT }}
         run: docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
-      # ================================================================
       # INVENTORY SERVICE
-      # ================================================================
-
       - name: Build Inventory Service image
         run: docker build -t inventory-service ./inventory-service
 
@@ -122,3 +139,4 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: inventory-service-${{ env.ENVIRONMENT }}
         run: docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+
