--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -13,25 +13,41 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      ENVIRONMENT: ${{ github.ref_name }}   # main | dev | test
-      IMAGE_TAG: latest                    
+      ENVIRONMENT: ${{ github.ref_name }}
+      IMAGE_TAG: latest
 
     steps:
-      # -------------------------
       # CHECKOUT
-      # -------------------------
       - name: Checkout current repo
         uses: actions/checkout@v4
 
-      # -------------------------
       # CLONAR FRONTEND
-      # -------------------------
       - name: Clonar Frontend (API Gateway)
         run: git clone https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/DevOpsObligatorio/DevOpsFront.git api-gateway
 
-      # -------------------------
+      # ---------------------------------------------------------
+      # SONARCLOUD - QUALITY GATE 
+      # ---------------------------------------------------------
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install sonar-scanner
+        run: npm install -g sonar-scanner
+
+      - name: Run SonarCloud Scan (Frontend)
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          sonar-scanner \
+            -Dsonar.projectKey=frontend_${{ env.ENVIRONMENT }} \
+            -Dsonar.organization=tu_org \
+            -Dsonar.sources=./api-gateway/src \
+            -Dsonar.qualitygate.wait=true \
+            -Dsonar.sourceEncoding=UTF-8
+
       # AWS LOGIN
-      # -------------------------
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -44,25 +60,18 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # -------------------------
       # BUILD IMAGE
-      # -------------------------
       - name: Build Frontend image
         run: docker build -t api-gateway ./api-gateway
 
-      # -------------------------
       # TAG latest
-      # -------------------------
       - name: Tag image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: docker tag api-gateway:latest $ECR_REGISTRY/api-gateway-${ENVIRONMENT}:latest
 
-      # -------------------------
-      # PUSH A ECR
-      # -------------------------
+      # PUSH
       - name: Push image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: docker push $ECR_REGISTRY/api-gateway-${ENVIRONMENT}:latest
-
