--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -45,7 +45,7 @@ jobs:
             -Dsonar.projectKey=frontend_${{ env.ENVIRONMENT }} \
             -Dsonar.organization=tu_org \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.sources=api-gateway/src \
+            -Dsonar.sources=api-gateway \
             -Dsonar.qualitygate.wait=true \
             -Dsonar.sourceEncoding=UTF-8
 
