--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           sonar-scanner \
             -Dsonar.projectKey=frontend_${{ env.ENVIRONMENT }} \
-            -Dsonar.organization=tu_org \
+            -Dsonar.organization=DevOpsObligatorio \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.sources=api-gateway \
             -Dsonar.qualitygate.wait=true \
