--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -39,14 +39,17 @@ jobs:
       - name: Run SonarCloud Scan (Frontend)
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           sonar-scanner \
-            sonar-scanner \
             -Dsonar.projectKey=DevOpsFront \
             -Dsonar.organization=DevOpsObligatorio \
-            -Dsonar.sources=src \
-            -Dsonar.host.url=https://sonarcloud.io/ \
-            -Dsonar.qualitygate.wait=true
+            -Dsonar.sources=. \
+            -Dsonar.go.coverage.reportPaths=coverage.out \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.qualitygate.wait=true \
+            -Dsonar.sourceEncoding=UTF-8
+
 
 
 
