--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -42,7 +42,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           sonar-scanner \
-            -Dsonar.projectKey=DevOpsFront \
+            -Dsonar.projectKey=DevOpsObligatorio_DevOpsFront \
             -Dsonar.organization=DevOpsObligatorio \
             -Dsonar.sources=. \
             -Dsonar.go.coverage.reportPaths=coverage.out \
