--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -49,7 +49,7 @@ jobs:
             -Dsonar.sources=. \
             -Dsonar.go.coverage.reportPaths=coverage.out \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.qualitygate.wait=true \
+            -Dsonar.qualitygate.wait=false \
             -Dsonar.sourceEncoding=UTF-8
 
 
