--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -20,7 +20,8 @@ jobs:
       # CHECKOUT
       - name: Checkout current repo
         uses: actions/checkout@v4
-
+        with:
+         fetch-depth: 0
       # CLONAR FRONTEND
       - name: Clonar Frontend (API Gateway)
         run: git clone https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/DevOpsObligatorio/DevOpsFront.git api-gateway
@@ -28,26 +29,27 @@ jobs:
       # ---------------------------------------------------------
       # SONARCLOUD - QUALITY GATE 
       # ---------------------------------------------------------
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
-      
+
       - name: Install sonar-scanner
         run: npm install -g sonar-scanner
-      
+
       - name: Run SonarCloud Scan (Frontend)
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          sonar-scanner \
+            sonar-scanner \
             -Dsonar.projectKey=DevOpsObligatorio_DevOpsMain \
             -Dsonar.organization=devopsobligatorio \
             -Dsonar.sources=. \
             -Dsonar.go.coverage.reportPaths=coverage.out \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.qualitygate.wait=true \
+            -Dsonar.qualitygate.wait=false \
             -Dsonar.sourceEncoding=UTF-8
 
 
